Optimize performance and fix critical betting issues
Performance improvements:
- Optimize rank calculations to only occur during state changes, not after every bet
- Limit leaderboard display to top 10 users instead of broadcasting all 1000+ players
- Remove redundant rank updates during AI betting cycles
- Improve user balance updates with individual user object transmission after payouts

Betting system fixes:
- Fix place odds calculation to be maximum 1/3 of win odds for realistic pari-mutuel betting
- Fix bet clearing bug that prevented betting on races after the first one
- Add proper bet limits (1 per type per race) with user-friendly error messages
- Ensure user balance correctly updates after race payouts

User experience improvements:
- Add user rank display in header that updates properly
- Improve race transition logic with proper bet clearing timing
- Enhanced leaderboard with current user rank tracking even when outside top 10
- Better error handling for betting restrictions

Technical improvements:
- Add user disconnection handling with 60-second timeout before removal
- Improve WebSocket message handling with consistent user object updates
- Fix races_played counter to increment only once per user per race
- Enhanced serialization of user objects for frontend consistency

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,6 +27,7 @@
                 <div class="logo">🏇 SaddleUp.io</div>
                 <div class="user-info">
                     <span id="user-name"></span>
+                    <span id="user-rank"></span>
                     <span id="user-balance">$0.00</span>
                 </div>
             </header>
