Add secure contact button with obfuscated email
- Add contact button in bottom-right corner with professional styling
- Implement email obfuscation to prevent bot scraping
- Pre-fill subject and body for user convenience
- Use mailto: link to open user's default email client

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -145,6 +145,11 @@
         <div id="error-message" class="error-message hidden"></div>
     </div>
 
+    <!-- Footer Contact -->
+    <footer class="contact-footer">
+        <button id="contact-btn" class="contact-btn">📧 Contact Developer</button>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
