Force trigger deployment

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -152,4 +152,4 @@
 
     <script src="script.js"></script>
 </body>
-</html>
+</html><- Handle edge cases like disconnections Force trigger Wed Jul 16 11:23:39 PM AEST 2025 -->
