--- a/frontend/index.html
+++ b/frontend/index.html
@@ -67,31 +67,29 @@
                         <div class="bet-types">
                             <button class="bet-type active" data-type="winner">Winner ($1)</button>
                             <button class="bet-type" data-type="place">Place ($1)</button>
-                            <button class="bet-type" data-type="trifecta">Trifecta ($1)</button>
+                            <button class="bet-type" data-type="trifecta">Box Trifecta ($1)</button>
+                        </div>
+
+                        <!-- Always visible horses grid -->
+                        <div class="horses-grid" id="horses-grid">
+                            <!-- Horse betting buttons will be generated -->
                         </div>
 
                         <div class="betting-options">
                             <!-- Winner/Place Betting -->
                             <div id="single-bet" class="bet-section active">
-                                <div class="horses-grid" id="horses-grid">
-                                    <!-- Horse betting buttons will be generated -->
-                                </div>
+                                <p class="bet-instructions">Select a horse to bet on:</p>
                             </div>
 
-                            <!-- Trifecta Betting -->
+                            <!-- Box Trifecta Betting -->
                             <div id="trifecta-bet" class="bet-section">
-                                <p>Select 3 horses in exact finishing order:</p>
-                                <div class="trifecta-selection">
-                                    <select id="trifecta-1st">
-                                        <option value="">1st Place</option>
-                                    </select>
-                                    <select id="trifecta-2nd">
-                                        <option value="">2nd Place</option>
-                                    </select>
-                                    <select id="trifecta-3rd">
-                                        <option value="">3rd Place</option>
-                                    </select>
-                                    <button id="place-trifecta-btn">Place Trifecta Bet</button>
+                                <p class="bet-instructions">Select 3 horses to finish in top 3 (any order):</p>
+                                <div class="trifecta-controls">
+                                    <div class="trifecta-selection-info">
+                                        <span id="trifecta-count">0/3 horses selected</span>
+                                        <button id="clear-trifecta-btn" class="clear-btn">Clear Selections</button>
+                                    </div>
+                                    <button id="place-trifecta-btn" class="place-bet-btn" disabled>Place Box Trifecta Bet</button>
                                 </div>
                             </div>
                         </div>
@@ -152,4 +150,4 @@
 
     <script src="script.js"></script>
 </body>
-</html><- Handle edge cases like disconnections Force trigger Wed Jul 16 11:23:39 PM AEST 2025 -->
+</html>
